<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="8dp"
        android:src="@drawable/fifty_two_challenge_app_ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        style="@style/fifty_two_challenge_app_text_style_caption_l_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fifty_two_challenge_app_profile"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/fifty_two_challenge_app_avatar_size"
        android:layout_height="@dimen/fifty_two_challenge_app_avatar_size"
        android:layout_marginTop="16dp"
        android:src="@drawable/fifty_two_challenge_app_il_deposit"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fifty_two_challenge_app_ic_camera_24"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        style="@style/fifty_two_challenge_app_text_style_menu_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fifty_two_challenge_app_username"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/email"
        style="@style/fifty_two_challenge_app_text_style_menu_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fifty_two_challenge_app_email"
        android:textColor="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:src="@drawable/fifty_two_challenge_app_ic_pencil_28"
        app:layout_constraintBottom_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="@id/name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/notifications"
        style="@style/fifty_two_challenge_app_text_style_menu_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fifty_two_challenge_app_notification"
        android:textColor="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <Switch
        android:id="@+id/notification_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/notifications"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="@id/notifications"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications" />

    <TextView
        android:id="@+id/dark_theme"
        style="@style/fifty_two_challenge_app_text_style_menu_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fifty_two_challenge_app_dark_theme"
        android:textColor="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/separator1" />

    <Switch
        android:id="@+id/theme_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/dark_theme"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="@id/dark_theme"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_theme" />

    <TextView
        android:id="@+id/rate_app"
        style="@style/fifty_two_challenge_app_text_style_menu_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fifty_two_challenge_app_rate"
        android:textColor="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/fifty_two_challenge_app_color_control_secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_app" />

    <TextView
        android:id="@+id/about"
        style="@style/fifty_two_challenge_app_text_style_caption_m_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fifty_two_challenge_app_about"
        android:textColor="@color/fifty_two_challenge_app_color_disabled_color"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/separator3" />


</androidx.constraintlayout.widget.ConstraintLayout>